fix flag alignment on profile and leaderboards

--- a/frontend/src/styles/leaderboards.scss
+++ b/frontend/src/styles/leaderboards.scss
@@ -159,10 +159,11 @@
           .badge {
             font-size: 0.6rem;
           }
-          .userFlags {
+          .flagsAndBadge {
             display: flex;
-            gap: 0.35em;
+            gap: 0.5rem;
             color: var(--sub-color);
+            place-items: center;
           }
         }
 
